# pyrfc6266

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd_release.yml  ci_automerge.yml  ci_dev_tools.yml  main.yml
pyrfc6266/: __init__.py  _main.py
tests/: test_pyrfc6266.py
