[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyrfc6266"
authors = [
    {name = "Anders Jensen", email = "andersandjensen@gmail.com"},
    {name = "Casper Welzel Andersen", email = "casper.w.andersen@sintef.no"},
]
description = "RFC6266 implementation in Python"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
requires-python = "~=3.10"
dynamic = ["version"]

dependencies = [
    "pyparsing~=3.3",
]

[project.optional-dependencies]
pre-commit = ["pre-commit ~=4.5"]
testing = [
    "pytest ~=9.0",
    "pytest-cov ~=7.0",
    "requests~=2.32",
]
dev = ["pyrfc6266[pre-commit,testing]"]

[project.urls]
Home = "https://github.com/SemanticMatter/pyrfc6266"

[tool.flit.module]
name = "pyrfc6266"

[tool.flit.sdist]
exclude = [
    ".gitignore",
    ".markdownlint.yaml",
    ".pre-commit-config.yaml",
    ".github/",
    "tests/",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true
warn_unreachable = true
plugins = []

[tool.ruff.lint]
extend-select = [
  "B",  # flake8-bugbear
  "I",  # isort
  "ARG",  # flake8-unused-arguments
  "C4",  # flake8-comprehensions
  "ICN",  # flake8-import-conventions
  "G",  # flake8-logging-format
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RUF",  # Ruff-specific
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "YTT",  # flake8-2020
  "EXE",  # flake8-executable
  "PYI",  # flake8-pyi
]
ignore = [
  "PLR",  # Refactor related pylint codes
  "PLC",  # Convention related pylint codes
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
]

[tool.pytest.ini_options]
minversion = "9"
addopts = "-rs --cov=pyrfc6266 --cov-report=term-missing:skip-covered --no-cov-on-fail"
filterwarnings = [
    # Fail on any warning
    "error",
]
log_level = "DEBUG"
